04-final-delivery/08-edu-air-control/05-test-documentation/annexes/Codigo_Fuente/05_Infraestructura/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eduaircontrol
  labels:
    app.kubernetes.io/part-of: eduaircontrol
